--- a/index.html
+++ b/index.html
@@ -38,6 +38,29 @@
             </div> 
         </nav>
 
+        <!--modal practice-->
+
+        <button class="btn btn-primary" data-toggle="modal" data-target="#myModal">Launch Modal</button>
+
+        <div class="modal fade" id="myModal">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Hello World!</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <p>Lorem ipsum dolor</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-primary" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <!--column examples/practice-->
         <div class="container" style="margin-top:30px;">
             <h5>Basic Columns</h5>
