--- a/index.html
+++ b/index.html
@@ -61,6 +61,30 @@
             </div>
         </div>
 
+        <!--forms practice-->
+
+        <div class="container" style="margin-top:20px">
+            <form>
+                <div class="form-group row">
+                    <label class="col-sm-3 col-form-label" for="email">Email Address</label>
+                    <div class="col-sm-9">
+                        <input type="text" class="form-control" id="email">
+                    </div>
+                </div>
+                <div class="form-group row">>
+                    <label class="col sm-3 col-form-label" for="password">Password</label>
+                    <div class="Col-sm-9">
+                        <input type="text" class="form-control" id="password">
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-9 offset-sm-3">
+                            <button type="submit" class="btn btn-primary">Login Now</button>
+                        </div>
+                    </div>
+                </div>
+            </form>    
+        </div>
+
         <!--column examples/practice-->
         <div class="container" style="margin-top:30px;">
             <h5>Basic Columns</h5>
