--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
     <head>
         <!-- Required meta tags -->
+
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
         <!-- Bootstrap CSS -->
+
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <title>Bootstrap 4</title>
         <style type="text/css">
@@ -15,6 +18,7 @@
     </head>
     <body>
         <!--navbar practice-->
+
         <nav class="navbar-light bg-light navbar-expand-lg fixed-top">
             <a href="#" class="navbar-brand">My Website</a>
             <button class="navbar-toggler" data-toggle="collapse" data-target="navbarCollapse">
@@ -85,7 +89,28 @@
             </form>    
         </div>
 
+        <!--list groups-->
+
+        <div class="container" style="margin-top:30px">
+            <ul class="list-group">
+                <li class="list-group-item ">
+                    Homepage
+                </li>
+                <li class="list-group-item  d-flex justify-content-between align-items-center">
+                    Notifications
+                    <span class="badge badge-primary badge-pill">3</span>
+                </li>
+                <li class="list-group-item ">
+                    Contact
+                </li>
+                <li class="list-group-item">
+                    Blog
+                </li>
+            </ul>
+        </div>
+
         <!--column examples/practice-->
+        
         <div class="container" style="margin-top:30px;">
             <h5>Basic Columns</h5>
             <div class="row">
