--- a/index.html
+++ b/index.html
@@ -109,6 +109,28 @@
             </ul>
         </div>
 
+        <!--card practice-->
+
+        <div class="container" style="margin-top:30px">
+            <div class="card">
+                <img class="card-img-top" alt="Card header image" src="https://placeimg.com/640/480/nature">
+                <div class="card-body">
+                    <h5 class="card-title">Card Title</h5>
+                    <p class="card-text">Lorem ipsum dolor</p>
+                </div>
+                <!--list group-->
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Item One</li>
+                    <li class="list-group-item">Item Two</li>
+                    <li class="list-group-item">Item Three</li>
+                </ul>
+                <div class="card-body">
+                    <a href="#" class="btn-btn-primary">Button One</a>
+                    <a href="#" class="btn-btn-default">Button Two</a>
+                </div>
+            </div>
+        </div>
+
         <!--column examples/practice-->
         
         <div class="container" style="margin-top:30px;">
