--- a/index.html
+++ b/index.html
@@ -180,6 +180,34 @@
 
         </div>
 
+        <!--navigation options-->
+
+        <div class="container" style="margin-top:30px">
+            
+            <ul class="nav nav-tabs">
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Item One</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Item Two</a>
+                    <div class="dropdown-menu">
+                        <a href="#" class="dropdown-item">Dropdown One</a>
+                        <a href="#" class="dropdown-item">Dropdown Two</a>
+                        <div class="dropdown-divider">
+                            <a href="#" class="dropdown-item">Dropdown Three</a>
+                        </div>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Item Three</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Item Four</a>
+                </li>
+            </ul>
+
+        </div>
+
         <!--column examples/practice-->
         
         <div class="container" style="margin-top:30px;">
